Bug 142116 - Application color Field Shading not respected
Summary: Application color Field Shading not respected
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:7.3.0
Keywords:
Depends on:
Blocks: Options-Dialog-Colours
  Show dependency treegraph
 
Reported: 2021-05-06 09:29 UTC by Heiko Tietze
Modified: 2021-09-13 06:46 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot using LibreOffice Dark color scheme (118.54 KB, image/png)
2021-05-06 09:29 UTC, Heiko Tietze
Details
Screenshot with latest master (21.33 KB, image/png)
2021-09-13 06:16 UTC, Heiko Tietze
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2021-05-06 09:29:36 UTC
Created attachment 171682 [details]
Screenshot using LibreOffice Dark color scheme

Via Tools > Options > LibreOffice > Application Colors: Field Shading (under Text Document) it should be possible to change the appearance of field highlighting. But in fact the captions remains grey and references take some dark color (LibreOffice Dark color scheme was introduced with bug 141986).

The screenshot shows a couple of cross-references under the heading "Fields" and a caption at the image. Fields are shown as names.
Comment 1 Dieter 2021-05-21 06:55:12 UTC
I confirm it with

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 1675a68526c43c6c6e4dc850ee911f0c1de75c88
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL
Comment 2 Commit Notification 2021-09-01 07:21:40 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d66ab0c7e8b0330c5c82e37e256557b1a7a6ae03

Resolves tdf#142116 - Respect field shading color on dark background

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Dieter 2021-09-12 09:13:49 UTC
(In reply to Commit Notification from comment #2)
Affected users are encouraged to test the fix and report feedback.

Still doesn't work with todays master

Version: 7.2.1.2 (x64) / LibreOffice Community
Build ID: 87b77fad49947c1441b67c559c339af8f3517e22
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: threaded
Comment 4 Heiko Tietze 2021-09-13 06:16:09 UTC
Created attachment 174995 [details]
Screenshot with latest master

From top to bottom: 
#1 Application color > Document background = Automatic / white
   Application color > Field shadings = Automatic / gray
(nothing changed)

#2 Version: 7.2.0.4 / LibreOffice Community
   Application color > Document background = Dark Gray 2
   Application color > Field shadings = Orange
(before the patch)

#3 Version: 7.3.0.0.alpha0+ / LibreOffice Community
   Build ID: ca512f301faf42b7d23675ca251b20e0ad67db1b
   CPU threads: 8; OS: Linux 5.14; UI render: default; VCL: kf5 (cairo+xcb)
(after the patch)
Comment 5 Dieter 2021-09-13 06:46:39 UTC
Heiko, sorry for confusion. It seems, that I mixed LODev and LO fresh in my yesterdays testing.

I can verify the fix with

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: b733ccad171e6def8fbdb93f31875dfdea47bdc6
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

Thanks for fixing it!