Resolves tdf#142116 - Respect field shading color on dark background

This reverts #100366# commit ce057f404b7b39df4a9259eecd90e28cf9a75fbd

Change-Id: I50872e38a154f5d24bcfaafd11488508e3c52356
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/121359
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>